fix: resolved the white space issue on iphone devices

--- a/src/style.less
+++ b/src/style.less
@@ -1100,6 +1100,9 @@ input {
 .global-footer-subscribe {
     width: 408px;
     height: 40px;
+    @media (max-width: 767px) {
+        width: 330px;
+    }
 }
 
 .global-footer-input-email {
